--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "moment": "^2.17.1",
     "nodemon": "^1.11.0",
     "socket.io": "^1.7.2"
   }
